Updated dependencies. kotlinx-serialization:1.7.3

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ koin = "4.0.0"                          # https://github.com/InsertKoinIO/koin/r
 kotlin = "2.0.20"                       # https://github.com/JetBrains/kotlin/releases
 kotlinx-atomicfu = "0.25.0"             # https://github.com/Kotlin/kotlinx-atomicfu/releases
 kotlinx-datetime = "0.6.1"              # https://github.com/Kotlin/kotlinx-datetime/releases
+kotlinx-serialization = "1.7.3"         # https://github.com/Kotlin/kotlinx.serialization/releases
 ktor = "2.3.12"                         # https://ktor.io/docs/releases.html#release-details
 logback = "1.5.8"                       # https://github.com/qos-ch/logback/tags
 micrometer-prometheus = "1.13.4"        # https://github.com/micrometer-metrics/micrometer/releases
@@ -91,6 +92,11 @@ kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "k
 # https://github.com/Kotlin/kotlinx-datetime
 # https://github.com/Kotlin/kotlinx-datetime/releases
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+
+# Serialization (part of the pLugin).
+# https://github.com/Kotlin/kotlinx.serialization
+# https://github.com/Kotlin/kotlinx.serialization/releases
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
 # Ktor.
 # https://api.ktor.io
