--- a/kdoc-server/src/main/resources/openapi/documentation.yaml
+++ b/kdoc-server/src/main/resources/openapi/documentation.yaml
@@ -66,7 +66,7 @@ paths:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Invalid CallContext. Use either admin/admin or guest/guest."
+                  value: "Invalid SessionContext. Use either admin/admin or guest/guest."
         "500":
           description: "Internal Server Error"
           content:
@@ -106,7 +106,7 @@ paths:
                 type: "string"
               examples:
                 Example#1:
-                  value: "Invalid CallContext. Use either admin/admin or guest/guest."
+                  value: "Invalid SessionContext. Use either admin/admin or guest/guest."
         "500":
           description: "Internal Server Error"
           content:
@@ -155,7 +155,7 @@ paths:
       tags:
         - "RBAC"
       description: "Opens the RBAC dashboard. Redirects to the login screen if the\
-        \ CallContext is invalid."
+        \ SessionContext is invalid."
       parameters:
         - name: "role"
           in: "query"
