--- a/kdoc-core/src/main/resources/config/config_storage.conf
+++ b/kdoc-core/src/main/resources/config/config_storage.conf
@@ -4,7 +4,7 @@ storage {
 	# The root path where uploaded files are stored.
 	uploadsRootPath: "uploads"
 
-	# The core URL for downloading files.
+	# The base URL for downloading files.
 	downloadsBasePath: "v1/document/download"
 
 	# Whether to cipher files at rest.
