Updated docker gradle version to 8.8

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,8 +7,7 @@
 !gradlew
 !gradlew.bat
 !keystore.p12
-!kdoc-access/**
-!kdoc-core/**
 !kdoc-document/**
 !kdoc-server/**
+!kdoc-system/**
 !build/libs/**
