--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,28 +2,50 @@
 
 [versions]
 
-commons-codec = "1.17.1"                # https://github.com/apache/commons-codec/tags
-database-h2 = "2.3.232"                 # https://github.com/h2database/h2database/releases
-detekt = "1.23.7"                       # https://github.com/detekt/detekt/releases
-dokka = "1.9.20"                        # https://github.com/Kotlin/dokka/releases
-exposed = "0.56.0"                      # https://github.com/JetBrains/Exposed/releases
-exposed-pagination = "1.0.3"            # https://github.com/perracodex/exposed-pagination/releases
-flyway = "11.0.0"                       # https://github.com/flyway/flyway/releases
-google-phonenumber = "8.13.51"          # https://github.com/google/libphonenumber/releases
-hikariCP = "6.2.1"                      # https://github.com/brettwooldridge/HikariCP/tags
-koin = "4.0.0"                          # https://github.com/InsertKoinIO/koin/releases
-kopapi = "1.0.6"                        # https://github.com/perracodex/kopapi/releases
-kotlin = "2.1.0"                        # https://github.com/JetBrains/kotlin/releases
-kotlinx-atomicfu = "0.26.1"             # https://github.com/Kotlin/kotlinx-atomicfu/releases
-kotlinx-datetime = "0.6.1"              # https://github.com/Kotlin/kotlinx-datetime/releases
-kotlinx-serialization = "1.7.3"         # https://github.com/Kotlin/kotlinx.serialization/releases
-ktor = "3.0.1"                          # https://ktor.io/docs/releases.html#release-details
-ktor-config = "1.0.1"                   # https://github.com/perracodex/ktor-config/releases
-logback = "1.5.12"                      # https://github.com/qos-ch/logback/tags
-micrometer-prometheus = "1.14.1"        # https://github.com/micrometer-metrics/micrometer/releases
-mockk = "1.13.13"                       # https://github.com/mockk/mockk/releases
-mockito-kotlin = "5.4.0"                # https://github.com/mockito/mockito-kotlin/releases
-typesafe-config = "1.4.3"               # https://github.com/lightbend/config/releases
+# https://github.com/apache/commons-codec/tags
+commons-codec = "1.17.1"
+# https://github.com/h2database/h2database/releases
+database-h2 = "2.3.232"
+# https://github.com/detekt/detekt/releases
+detekt = "1.23.7"
+# https://github.com/Kotlin/dokka/releases
+dokka = "1.9.20"
+# https://github.com/JetBrains/Exposed/releases
+exposed = "0.56.0"
+# https://github.com/perracodex/exposed-pagination/releases
+exposed-pagination = "1.0.3"
+# https://github.com/flyway/flyway/releases
+flyway = "11.0.0"
+# https://github.com/google/libphonenumber/releases
+google-phonenumber = "8.13.51"
+# https://github.com/brettwooldridge/HikariCP/tags
+hikariCP = "6.2.1"
+# https://github.com/InsertKoinIO/koin/releases
+koin = "4.0.0"
+# https://github.com/perracodex/kopapi/releases
+kopapi = "1.0.6"
+# https://github.com/JetBrains/kotlin/releases
+kotlin = "2.1.0"
+# https://github.com/Kotlin/kotlinx-atomicfu/releases
+kotlinx-atomicfu = "0.26.1"
+# https://github.com/Kotlin/kotlinx-datetime/releases
+kotlinx-datetime = "0.6.1"
+# https://github.com/Kotlin/kotlinx.serialization/releases
+kotlinx-serialization = "1.7.3"
+# https://ktor.io/docs/releases.html#release-details
+ktor = "3.0.1"
+# https://github.com/perracodex/ktor-config/releases
+ktor-config = "1.0.1"
+# https://github.com/qos-ch/logback/tags
+logback = "1.5.12"
+# https://github.com/micrometer-metrics/micrometer/releases
+micrometer-prometheus = "1.14.1"
+# https://github.com/mockk/mockk/releases
+mockk = "1.13.13"
+# https://github.com/mockito/mockito-kotlin/releases
+mockito-kotlin = "5.4.0"
+# https://github.com/lightbend/config/releases
+typesafe-config = "1.4.3"
 
 
 [plugins]
