--- a/dochub-core/base/src/main/resources/config/config_cors.conf
+++ b/dochub-core/base/src/main/resources/config/config_cors.conf
@@ -8,8 +8,8 @@ cors {
 	# items should be single quoted and separated by commas.
 	#
 	# Examples:
-	# 	List: ["kcrud.com;http,https;api,admin", "potato.com;https;api", "somewhere.com;https;"]
-	#	Single string: "'kcrud.com;http,https;api,admin','potato.com;https;api','somewhere.com;https;'"
+	# 	List: ["krud.com;http,https;api,admin", "potato.com;https;api", "somewhere.com;https;"]
+	#	Single string: "'krud.com;http,https;api,admin','potato.com;https;api','somewhere.com;https;'"
 	#
 	# If empty list or any of the hosts is '*', then the default is to allow all hosts,
 	# in which case schemes and subdomains are ignored even if defined, in addition of any other host.
